@@ -13,6 +13,8 @@ Version 1.7.4
        doesn't work. (Stefan)
 - BUG: Issue #176: Diff settings "restore defaults"
        doesn't work correctly. (Stefan)
+- BUG: Issue #177: TortoiseMerge shows
+       long lines incorrect. (Stefan)
 
 Version 1.7.3
 - BUG: Issue #149: Crash in OpenSSL. (Stefan)
